Organizing the project structure

--- a/src/userService/UserService.csproj
+++ b/src/userService/UserService.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-    <AssemblyName>CsharpHandlers</AssemblyName>
     <PackageId>aws-csharp</PackageId>
+    <RootNamespace>UserService</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
