--- a/test/UserServiceTests/UserServiceTests.csproj
+++ b/test/UserServiceTests/UserServiceTests.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Amazon.Lambda.Core" Version="1.1.0" />
         <PackageReference Include="Amazon.Lambda.TestUtilities" Version="1.1.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.6" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.6" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
         <PackageReference Include="Moq" Version="4.14.5" />
