--- a/test/UserServiceTests/docker-compose.yml
+++ b/test/UserServiceTests/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:5.7
     environment:
       MYSQL_ROOT_PASSWORD: "MySql2019!"
-      MYSQL_DATABASE: "testedb"
+      MYSQL_DATABASE: "userservicedb"
     ports:
       - "3306:3306"
     volumes:
@@ -13,7 +13,7 @@ services:
     networks:
       - mysql-compose-network
 
-  adminer:
+  adminer: # For Server use the mysql service name: mysqlsrv
     image: adminer
     ports:
       - 8080:8080
