--- a/test/UserServiceTests/UserServiceTests.csproj
+++ b/test/UserServiceTests/UserServiceTests.csproj
@@ -29,7 +29,9 @@
       <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Remove="appsettings.prod.json" />
+      <None Update="appsettings.prod.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
