--- a/src/userService/serverless.yml
+++ b/src/userService/serverless.yml
@@ -73,63 +73,29 @@ functions:
     # provisionedConcurrency: 2 # optional, Count of provisioned lambda instances
     events:
       - http:
-          path: v1/users
+          path: v1/users/
           method: post
 
-    # you can add packaging information here
-    #    package:
-    #      artifact: bin/Release/netcoreapp3.1/userService.zip
-    #  exclude:
-    #    - exclude-me.js
-    #    - exclude-me-dir/**
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - websocket: $connect
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-#      - alb:
-#          listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-#          priority: 1
-#          conditions:
-#            host: example.com
-#            path: /hello
+  updateUser:
+    handler: UserService::UserService.Functions.UpdateUserFunction::Handle
+    # provisionedConcurrency: 2 # optional, Count of provisioned lambda instances
+    events:
+      - http:
+          path: v1/users/{userid}
+          method: put
 
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
+  deleteUser:
+    handler: UserService::UserService.Functions.DeleteUserFunction::Handle
+    # provisionedConcurrency: 2 # optional, Count of provisioned lambda instances
+    events:
+      - http:
+          path: v1/users/{userid}
+          method: delete
 
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
+  getUserById:
+    handler: UserService::UserService.Functions.GetUserByIdFunction::Handle
+    # provisionedConcurrency: 2 # optional, Count of provisioned lambda instances
+    events:
+      - http:
+          path: v1/users/{userid}
+          method: get
