--- a/test/UserServiceTests/UserServiceTests.csproj
+++ b/test/UserServiceTests/UserServiceTests.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="appsettings.test.json">
+      <None Update="appsettings.local.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="appsettings.json">
