--- a/test/UserServiceTests/UserServiceTests.csproj
+++ b/test/UserServiceTests/UserServiceTests.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Amazon.Lambda.Core" Version="1.1.0" />
         <PackageReference Include="Amazon.Lambda.TestUtilities" Version="1.1.0" />
+        <PackageReference Include="FluentAssertions" Version="5.10.3" />
         <PackageReference Include="MediatR" Version="8.1.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.6" />
