Adding EventSourcing tier

--- a/src/userService/appsettings.local.json
+++ b/src/userService/appsettings.local.json
@@ -1,5 +1,6 @@
 {
   "envVar1": "Lorem",
   "envVar2": "Ipsum",
-  "UserServiceDbContextConnectionString": "Server=localhost;Database=userservicedb;Uid=root;Pwd=MySql2019!;"
+  "UserServiceDbContextConnectionString": "Server=localhost;Database=userservicedb;Uid=root;Pwd=MySql2019!;",
+  
 }
