--- a/test/UserServiceTests/docker-compose.yml
+++ b/test/UserServiceTests/docker-compose.yml
@@ -20,8 +20,27 @@ services:
     networks:
       - mysql-compose-network
 
+  eventstore.db:
+    image: eventstore/eventstore
+    environment:
+      - EVENTSTORE_CLUSTER_SIZE=1
+      - EVENTSTORE_INT_TCP_PORT=1112
+      - EVENTSTORE_EXT_TCP_PORT=1113
+      - EVENTSTORE_INT_HTTP_PORT=2112
+      - EVENTSTORE_EXT_HTTP_PORT=2113
+      - EVENTSTORE_DEV=true
+    ports:
+      - "1112:1112"
+      - "1113:1113"
+      - "2112:2112"
+      - "2113:2113"
+    networks:
+      - eventstore-network
+
 networks:
   mysql-compose-network:
+    driver: bridge
+  eventstore-network:
     driver: bridge
 
 volumes:
