- Added Email features - Issue fixed - There is an issue when we try assign a header object to Headers property. -  https://github.com/aws/aws-sdk-net/issues/1695
- Response API format improved

--- a/src/userService/appsettings.local.json
+++ b/src/userService/appsettings.local.json
@@ -2,5 +2,12 @@
   "envVar1": "Lorem",
   "envVar2": "Ipsum",
   "UserServiceDbContextConnectionString": "Server=localhost;Database=userservicedb;Uid=root;Pwd=MySql2019!;",
+  "SmtpConfiguration": {
+    "Host": "email-smtp.sa-east-1.amazonaws.com",
+    "Port": 465,
+    "UserName": "<username>",
+    "Password": "<password>",
+    "UseSsl": true
+  }
   
 }
